# String-Utility-Ruby

./: .gitignore  .travis.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  string-utility.gemspec
docs/: StringUtility.html  _index.html  class_list.html  file.CHANGELOG.html  file.LICENSE.html  file.README.html  index.html  method_list.html  top-level-namespace.html
ext/: Cargo.toml  Makefile  extconf.rb
ext/src/: lib.rs
lib/: string-utility.rb  string_utility.rb  utils.rb
spec/: benchmark.rb  spec_helper.rb  testcases.rb  util_spec.rb
