[package]
name = "string-utility-rb-native"
version = "1.0.0"
authors = ["Eli Clemente Gordillo Foster <elifosterwy@gmail.com>"]
homepage = "https://rubygems.org/gems/string-utility"
repository = "https://github.com/elifoster/String-Utility-Ruby"
readme = "README.md"
license = "MIT"
description = "The Rust native extension for the StringUtility Ruby gem."

[lib]
name = "stringutility"
crate-type = ["dylib"]

[dependencies]
ruru = "0.7"
